<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="15dp"
        android:adjustViewBounds="true"
        android:maxHeight="180dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/image_not_found"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        tools:text="@string/title_1999"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@string/summary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/value_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="17dp"
        android:textSize="24dp"
        android:textColor="#D19C73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summary"
        tools:text="@string/_0_0"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/summary"
        android:layout_margin="15dp"
        app:layout_constraintStart_toEndOf="@id/value_rating"/>
<!--        style="@style/Widget.AppCompat.RatingBar.Indicator"-->



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/like"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@id/summary"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:background="@drawable/baseline_favorite_border_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>